<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/buttonSaveApi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/design_default_color_primary_dark"
            android:onClick="goToMain"
            android:text="@string/returnButton"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/startLogger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/app_toggle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/startLogger"
            app:layout_constraintTop_toBottomOf="@+id/buttonSaveApi">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/buttonUpdateLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateLogger"
            app:layout_constraintBottom_toBottomOf="@+id/startLogger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startLogger"
            app:layout_constraintTop_toTopOf="@+id/startLogger" />

        <Button
            android:id="@+id/buttonClearDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearDB"
            app:layout_constraintBottom_toBottomOf="@+id/startLogger"
            app:layout_constraintEnd_toStartOf="@+id/startLogger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/startLogger" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>